# umikry-core

./: .gitignore  CONTRIBUTING.md  README.md  UmikryCore.py  UmikryDCGAN.py  UmikryData.py  UmikryFaceDetector.py  UmikryFaceRecognizer.py  UmikryFaceTransformator.py  core.py  data.py  detection.py  generator.py  requirements.txt  transformation.py
cpp/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  UmikryCore.cpp  UmikryFaceDetector.cpp  UmikryFaceDetector.hpp  UmikryFaceTransformator.cpp  UmikryFaceTransformator.hpp  conanfile.txt  python_bindings.cpp  setup.cfg  setup.py  umikry.cpp
cpp/pyumikry/: CMakeLists.txt  python_bindings.cpp
cpp/umikry/: CMakeLists.txt  umikry.cpp
cpp/umikrycore/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.hpp  FaceTransformator.cpp  FaceTransformator.hpp  UmikryFaceDetector.cpp  UmikryFaceTransformator.cpp
models/: autoencoder_weights.h5  community_facedetector.h5  community_facedetector_weights.h5  discriminator.h5  discriminator_weights.h5  generator.h5  generator_weights.h5
